<resources>
    <string name="app_name">Log the Jog</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="avg_speed">Average speed</string>
    <string name="current_speed">Current speed</string>
    <string name="duration">Duration</string>
    <string name="distance">Kilometers</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="exercise_complete">Exercise Complete</string>
    <string name="avgSpeedExample">12.80</string>
    <string name="distanceExample">3.04</string>
    <string name="durationExample">0:27:46</string>
    <string name="currSpeedExample">14.23</string>
    <string name="pace">Pace</string>
    <string name="caloriesLabel">Cal burned</string>
    <string name="n_a">N/A</string>
    <string name="paceData">%1$d:%2$d</string>
    <string name="speed">SPEED</string>
    <string name="elevation">Elevation</string>
    <string name="km">KM</string>
    <string name="time">time</string>
    <string name="save">Save</string>
    <string name="km_s">km/s</string>
    <string name="walking">Walking</string>
    <string name="activity">Activity</string>
    <string name="m">m</string>
    <string name="notification_title">Log the Jog is recording your location.</string>
    <string name="notification_message">Take note!</string>
    <string name="ticker_text">tick! tock!</string>
</resources>